# gtkmenuplus

./: AUTHORS  INSTALL  INSTALL.md  Makefile.am  README.md  configure.ac  gtkmenuplus.desktop  install.sh  test_menu.txt  uninstall.sh
acinclude/: ragel.m4
docs/: CHANGELOG.md  INSTALL  README  changelog  gtkmenuplus.1.h2m  menu_configuration_file_format.md  menu_configuration_file_format.txt  scripting_guide.md  usage.md  usage.txt
examples/: demoMenu1small.sh  demoMenu2large.sh  demoMenu3launchersAndInclude.sh  demoMenu4ifVarsParams.sh  demoMenu5subMenuKeyword.sh  demoMenu6caseChanger.sh  demoMenuAll.sh  demos.txt
examples/case_changer/: caseChanger.sh  casechange_menu  changecaselaunch.sh
examples/demo_menus/: common.sh  demoMenuIfVarsParams.txt  demoMenuIncluded.txt  demoMenuLarge.txt  demoMenuLaunchersAndInclude.txt  demoMenuSmall.txt  demoMenuSubMenuKeyword.txt
examples/demo_menus/launchers/: 1gnome-control-center.desktop  2gnome-info-panel.desktop  3gnome-system-monitor.desktop  demoMenuIfVarsParams.txt  demoMenuSmall.txt
examples/manpage_menu/: INSTALL  manpageCommon.sh  manpageDisplay.sh  manpageMenu.sh  manpageMenuDefaultConfig  manpagesSpecific  temp  usage.txt
examples/ubuntu_stop_modes/: ubuntu_stop_modes
icons_for_test_menu/: README
man/: gtkmenuplus.1  gtkmenuplus.5
package/: gtkmenuplus.desktop  gtkmenuplus.xml
source/: Makefile.am  activ_log.c  activ_log.decl.h  activ_log.h  comment.c  comment.h  common.c  common.h  common_gnu.c  common_gnu.h  conf.c  conf.h  configure.ac  core.c  core.decl.h  core.h  directive.c  directive.h  entry.c  entry.h  entry_cmd.c  entry_cmd.h  entry_icon.c  entry_icon.h  entry_var.c  entry_var.decl.h  entry_var.h  fmtg.c  fmtg.h  gtkmenuplus.c  if.c  if.decl.h  if.h  if_truth_value.c  if_truth_value.decl.h  if_truth_value.rl  input.c  input.h  json.c  json.h  (+22 more)
source/gtk2/: makefile
source/gtk3/: makefile
test/: 1.gtkmenuplus  BATCH  README.md  START  abspath.gtkmenuplus  applications.gtkmenuplus  colon-list.gtkmenuplus  comments-1.gtkmenuplus  comments-2.gtkmenuplus  conf_mnemonic-1.gtkmenuplus  endsubmenu-1.gtkmenuplus  endsubmenu-2.gtkmenuplus  endsubmenu.gtkmenuplus  format-1.gtkmenuplus  format-2.gtkmenuplus  format-3.gtkmenuplus  format-4.gtkmenuplus  format.gtkmenuplus  format_mnemonic-1.gtkmenuplus  format_mnemonic-2.gtkmenuplus  format_mnemonic-3.gtkmenuplus  format_mnemonic-4.gtkmenuplus  format_mnemonic-5.gtkmenuplus  github-issue-1.gtkmenuplus  github-issue-2.gtkmenuplus  github-issue-3-1.gtkmenuplus  github-issue-3-2.gtkmenuplus  icon_errors.gtkmenuplus  icon_of_abspath.gtkmenuplus  icon_of_cmd_uri.gtkmenuplus  icon_of_directory_include.gtkmenuplus  icon_of_item.gtkmenuplus  icon_of_launcher.gtkmenuplus  icon_of_submenu.gtkmenuplus  icon_sizes.gtkmenuplus  icondirectory.gtkmenuplus  if-1.gtkmenuplus  if-2.gtkmenuplus  if-3.gtkmenuplus  if-4.gtkmenuplus  (+39 more)
test/1/2/: 2b.desktop
test/1/2-1/: .directory.desktop
test/abspath=/: leafpad.desktop  readme.md
test/data/: include-4.tgz  include-5.tgz
test/format/: .desktop.directory  .directory.desktop
test/format/1/: .desktop.directory  .gtkmenuplus.desktop  1a.desktop
test/format/1/2/: .desktop.directory  .directory.desktop  .gtkmenuplus.desktop  2a.desktop
test/icondirectory=/XPM/: gtkmenuplus.xpm
test/include=/: f0.c  f0.h  f1.c  f1.h
test/launcherdirfile/: 0.directory
test/launcherdirfile/1/: 1a.desktop  1b.desktop  1c.desktop  1d.desktop
test/launcherdirfile/1/2/: 2.directory  2a.desktop  2b.desktop  2c.desktop  2d.desktop
test/launchersubmenu=/basic/: Basic.directory  category_empty.desktop  category_null.desktop  lxappearance.desktop
test/launchersubmenu=/multi/: uncategorized.directory
test/launchersubmenu=/multi/1/: 1_Puppy-Desktop.directory  2_Puppy-DesktopApplets.directory  2_Puppy-DesktopCountry.directory  2_Puppy-DesktopSettings.directory
test/launchersubmenu=/multi/10/: 1_Puppy-Document.directory  2_Puppy-DocumentSub.directory  2_Puppy-DocumentTextEditor.directory  2_Puppy-DocumentUtility.directory
test/launchersubmenu=/multi/11/: 1_Puppy-Calculate.directory  2_Puppy-CalculateSub.directory  2_Puppy-CalculateUtility.directory  2_Puppy-Calculators.directory
test/launchersubmenu=/multi/12/: 1_Puppy-Personal.directory  2_Puppy-PersonalSub.directory  2_Puppy-PersonalUtility.directory
test/launchersubmenu=/multi/13/: 1_Puppy-Network.directory  2_Puppy-NetworkDialup.directory  2_Puppy-NetworkSub.directory
test/launchersubmenu=/multi/14/: 2_Puppy-Internet.directory
test/launchersubmenu=/multi/15/: 1_Puppy-Multimedia.directory  2_Puppy-MultimediaBurn.directory  2_Puppy-MultimediaSub.directory
test/launchersubmenu=/multi/16/: 2_Puppy-Fun.directory
test/lib/: common.gtkmenuplus  common.sh  data_tree.entry  operator_instructions.entry  post_write_ref.sh  restart.entry  styles.gtkmenuplus
test/link_targets/: yes.desktop
test/nest/: 1a.desktop  1b.desktop
test/nest/2/: 2b.desktop
test/nest/2-1/: .desktop.directory  2a.desktop  2b [geany].desktop
test/nest/2-2/: .desktop.directory  2a.desktop  2b [leafpad].desktop  2b.desktop
test/reference/: abspath.json  comments-1.json  conf_mnemonic-1.json  endsubmenu-1.json  endsubmenu-2.json  format-1.json  format-2.json  format-3.json  format-4.json  format_mnemonic-1.json  format_mnemonic-2.json  format_mnemonic-3.json  format_mnemonic-4.json  format_mnemonic-5.json  icon_errors.json  icon_of_abspath.json  icon_of_cmd_uri.json  icon_of_directory_include.json  icon_of_item.json  icon_of_launcher.json  icon_of_submenu.json  icon_sizes.json  icondirectory.json  if-1.json  if-3.json  if-4.json  if-5.json  if-6.json  include-1.json  include-2.json  include-4.json  include-5.json  indent_rule-1.json  indent_rule-3.json  issue-gh-1.json  launcherdirectory.json  launcherdirfile.json  launcherlistfirst.json  launchersubmenu-basic.json  launchersubmenu-uncategorized.json  (+8 more)
test/scanner/Include/: .ln--dir--file
test/scanner/Launcher/: .launcher1.desktop  .ln--dir--launcher  launcher2.desktop  ln--dir--launcher
tool/: make_decl.sh  mantomd.sh  mdtoman.sh
(+51 files in other folders)
